--- a/example/package.json
+++ b/example/package.json
@@ -7,7 +7,7 @@
   },
   "dependencies": {
     "react": "15.4.2",
-    "react-native": "0.41.2",
+    "react-native": "^0.42.0",
     "react-native-material-ripple": "file:../"
   },
   "devDependencies": {
