--- a/.eslintrc
+++ b/.eslintrc
@@ -14,6 +14,12 @@
   ],
 
   'rules': {
+    'no-unused-vars': ['error', {
+      'vars': 'all',
+      'args': 'none',
+      'ignoreRestSiblings': true,
+    }],
+
     'comma-dangle': ['error', 'always-multiline'],
   },
 }
