--- a/package.json
+++ b/package.json
@@ -22,7 +22,11 @@
   "devDependencies": {
     "babel-eslint": "^7.2.0",
     "eslint": "^3.18.0",
-    "eslint-plugin-react": "^6.10.0"
+    "eslint-plugin-react": "^7.0.0"
+  },
+
+  "dependencies": {
+    "prop-types": "^15.5.10"
   },
 
   "scripts": {
