--- a/package.json
+++ b/package.json
@@ -30,6 +30,6 @@
   },
 
   "scripts": {
-    "test": "node_modules/.bin/eslint index.js styles.js example/app.js"
+    "lint": "eslint index.js styles.js example/app.js"
   }
 }
