--- a/example/package.json
+++ b/example/package.json
@@ -1,17 +1,21 @@
 {
   "name": "example",
-  "version": "0.0.1",
+  "version": "0.1.0",
   "private": true,
   "scripts": {
-    "ios": "node node_modules/react-native/local-cli/cli.js run-ios",
-    "android": "node node_modules/react-native/local-cli/cli.js run-android"
+    "start": "react-native start",
+    "lint": "eslint ."
   },
   "dependencies": {
-    "react": "16.0.0-alpha.12",
-    "react-native": "0.48.3",
-    "react-native-material-ripple": "file:../"
+    "react": "16.8.6",
+    "react-native": "0.60.5",
+    "react-native-material-ripple": "^0.8.0"
   },
   "devDependencies": {
-    "babel-preset-react-native": "3.0.2"
+    "@babel/core": "^7.6.0",
+    "@babel/runtime": "^7.6.0",
+    "@react-native-community/eslint-config": "^0.0.5",
+    "eslint": "^6.3.0",
+    "metro-react-native-babel-preset": "^0.56.0"
   }
 }
