--- a/package.json
+++ b/package.json
@@ -22,8 +22,9 @@
 
   "devDependencies": {
     "babel-eslint": "^10.0.0",
-    "eslint": "^6.3.0",
-    "eslint-plugin-react": "^7.0.0"
+    "eslint": "^6.5.0",
+    "eslint-plugin-react": "^7.16.0",
+    "eslint-plugin-react-native": "^3.7.0"
   },
 
   "dependencies": {
